--- a/Cellular_Lattices.ipynb
+++ b/Cellular_Lattices.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clone Github and import packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -60,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sample Lattices for SVD"
+    "## Sample Lattices for SVD"
    ]
   },
   {
@@ -72,6 +79,22 @@
     "x = MainPrePro.MainPrePro()\n",
     "page = x.run()\n",
     "display(page)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot selected lattices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plattices.Plattice()"
    ]
   }
  ],
