--- a/Cellular_Lattices.ipynb
+++ b/Cellular_Lattices.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "Image(open('interactive_voronoi1.gif','rb').read())"
+    "Image(open('Tesselations/interactive_voronoi1.gif','rb').read())"
    ]
   },
   {
