--- a/Cellular_Lattices.ipynb
+++ b/Cellular_Lattices.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !rm -rf /content/pyCUFSM\n",
-    "# !git clone https://github.com/joelbenjohn/Tesselations\n",
-    "# import sys\n",
-    "# sys.path.insert(1, '/content/Tesselations')\n",
+    "!rm -rf /content/pyCUFSM\n",
+    "!git clone https://github.com/joelbenjohn/Tesselations\n",
+    "import sys\n",
+    "sys.path.insert(1, '/content/Tesselations')\n",
     "import Laguerre\n",
     "import Tesselations\n",
     "import numpy\n",
